# battery-notify

./: .gitignore  Cargo.toml
src/: acpi.rs  app_state.rs  battery.rs  helper.rs  main.rs  notifier.rs  watcher.rs
src/acpi/: charge_status.rs  mod.rs
src/app/: battery_data.rs  mod.rs
src/batt_info/: charge_status.rs  data.rs  mod.rs
