[package]
name = "battery-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.20"
serde_json = "1.0.105"
notify-rust = "4.9.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["full"] }
notify = { version = "6.1.1", default-features = false, features = [
    "macos_kqueue",
] }
regex = "1.9.5"
